--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Neo Sans Arabic';
+    src: url('src/assets/alfont_com_NeoSansArabic.ttf');
+  }
 *{
     font-family: Neo Sans Arabic;
     background: #F3F5F7;
