--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,6 +1,71 @@
 * {
   background: #fff;
+  font-family: Neo Sans Arabic;
 }
+
+
+.search{
+  display: flex;
+  flex-direction: row;
+align-items: center;  
+margin-top: 1.62rem;
+  margin-bottom: 1rem;
+  margin-right: 8.44rem;
+  background: transparent;
+}
+
+.search span{
+  color: #1C1C28;
+
+font-family: Neo Sans Arabic;
+font-size: 1rem;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+background-color: transparent;
+margin-left: 1.6rem;
+}
+
+.search input{
+  width: 17.3125rem;
+height: 2.25rem;
+flex-shrink: 0;
+/* stroke-width: 3px;
+stroke: rgba(255, 255, 255, 0.863); */
+border-radius: 0.375rem;
+fill: #FFF;
+stroke-width: 1px;
+stroke: rgba(146, 161, 173, 0.40);
+padding-right:2rem ;
+background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat right;
+background-size: 20px;
+}
+
+.search button{
+  border: none;
+  background: transparent;
+  width: 2.25rem;
+  height: 2.25rem;
+background: transparent;}
+
+  .searchleft{
+    position: absolute;
+    left: 2rem;
+    background-color: #F3F5F7;
+  }
+
+  .searchleft button{
+width: 7rem;
+align-items: center;
+gap: 0.5rem;
+border-radius: 0.375rem;
+background: #8A74F9;
+color: white;
+cursor: pointer;
+  }
+
+  .searchleft span{
+  }
 .tconatiner {
   width: 90%;
   height: 19.9375rem;
